Add old default resume JSON, update translations, and refactor resume types
- Added a new JSON file for the old default resume containing detailed SEO tags, personal info, summary, latest AI products, core competencies, technical skills, experience, education, and impact summary.
- Updated English translations to include a new section for "Recent Activity."
- Refactored the resume type definition to change `latestAiProduct` to an array of `latestAiProducts`.
- Commented out the ProfileSwitcher and LanguageSwitcher components in the layout for the home page.
- Changed the heading in the main page from "Latest AI Product" to "Recent Activity."

--- a/src/lib/i18n/translations/en.json
+++ b/src/lib/i18n/translations/en.json
@@ -9,6 +9,7 @@
 	},
 	"sections": {
 		"professionalSummary": "Professional Summary",
+		"recentActivity": "Recent Activity",
 		"latestAiProduct": "Latest AI Product",
 		"experience": "Experience",
 		"education": "Education",
